# oc-user-sim

./: .gitignore  devlogs.md  generate_dataset.py  pyproject.toml  train_lora.py
notebooks/: test_finetuned_model.ipynb
